--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -32,13 +32,7 @@ jobs:
         sudo ACCEPT_EULA=Y apt-get -y install msodbcsql17
         python -m pip install --upgrade pip
         pip install wheel
-        echo "Build minimal container for docker-in-docker diagnostics"
-        docker build -f Dockerfile.diagnostics -t testcontainers-python .
-        echo "Bare metal diagnostics"
-        python diagnostics.py
-        echo "Container diagnostics with bridge network"
-        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=bridge testcontainers-python python diagnostics.py          echo "Container diagnostics with host network"
-        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock --network=host testcontainers-python python diagnostics.py
+        pip install deprecation
         flake8
         sphinx-build -nW docs docs/_build/html
         py.test -sv --cov-config .coveragerc --cov-report html:skip-covered --cov-report term:skip-covered --cov=testcontainers --tb=short tests/
