--- a/.github/workflows/python-package-conda.yml
+++ b/.github/workflows/python-package-conda.yml
@@ -34,7 +34,7 @@ jobs:
         pip install wheel
         pip install deprecation
         
-        sphinx-build -nW docs docs/_build/html
+        pip install -r requirements.in
         py.test -sv --cov-config .coveragerc --cov-report html:skip-covered --cov-report term:skip-covered --cov=testcontainers --tb=short tests/
         codecov
         
