--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,3 +53,27 @@ jobs:
           sphinx-build -nW docs docs/_build/html
           py.test -sv --cov-config .coveragerc --cov-report html:skip-covered --cov-report term:skip-covered --cov=testcontainers --tb=short tests/
           codecov
+          
+  armv64_job:
+        name: Build and Test for arm64
+        runs-on: ubuntu-20.04
+        steps:
+        - uses: actions/checkout@v2
+        - name: Set up QEMU
+          id: qemu
+          uses: docker/setup-qemu-action@v1
+        - name: Install and Run tests
+          run: |
+            docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
+              arm64v8/ubuntu:20.04 \
+              bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl && \
+              python3 -m pip install virtualenv && python3 -m venv py38-venv && \
+              source py38-venv/bin/activate && \
+              python -m pip install --upgrade pip && \
+              pip install wheel && \
+              pip install -r requirements/${{ matrix.python-version }}.txt && \
+              flake8 && \
+              sphinx-build -nW docs docs/_build/html && \
+              py.test -sv --cov-config .coveragerc --cov-report html:skip-covered --cov-report term:skip-covered --cov=testcontainers --tb=short tests/ && \
+              codecov && \
+              deactivate'     
