--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -71,9 +71,10 @@ jobs:
               source py38-venv/bin/activate && \
               python -m pip install --upgrade pip && \
               pip install wheel && \
-              pip install -r requirements/${{ matrix.python-version }}.txt && \
-              flake8 && \
-              sphinx-build -nW docs docs/_build/html && \
+              python setup.py install && \
+             
+             
+             
               py.test -sv --cov-config .coveragerc --cov-report html:skip-covered --cov-report term:skip-covered --cov=testcontainers --tb=short tests/ && \
               codecov && \
               deactivate'     
