--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
               pip install wheel && \
               python setup.py install && \
              
-             
+              pip install pytest
              
               pytest && \
               codecov && \
