--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,9 +72,11 @@ jobs:
               python -m pip install --upgrade pip && \
               pip install wheel && \
               python setup.py install && \
-             
-              pip install pytest
-             
+              pip install pytest && \
+              pip install sqlalchemy && \
+              pip install kafka && \
+              pip install redis && \
+              pip install selenium && \
               pytest && \
               codecov && \
               deactivate'     
