--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,6 +77,7 @@ jobs:
               pip install kafka && \
               pip install redis && \
               pip install selenium && \
+              pip3 install --force-reinstall --no-deps google-cloud-dataproc==1.1.1 && \
               pytest -sv --cov-config .coveragerc --cov-report html:skip-covered --cov-report term:skip-covered --cov=testcontainers --tb=short tests/ && \
               codecov && \
               deactivate'     
