--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.8]
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@v2
@@ -53,3 +53,34 @@ jobs:
           sphinx-build -nW docs docs/_build/html
           py.test -sv --cov-config .coveragerc --cov-report html:skip-covered --cov-report term:skip-covered --cov=testcontainers --tb=short tests/
           codecov
+  armv64_job:
+        name: Build and Test for arm64
+        runs-on: ubuntu-20.04
+        steps:
+        - uses: actions/checkout@v2
+        - name: Set up QEMU
+          id: qemu
+          uses: docker/setup-qemu-action@v1
+        - name: Install and Run tests
+          run: |
+            docker run --rm -v ${{ github.workspace }}:/ws:rw --workdir=/ws \
+              arm64v8/ubuntu:20.04 \
+              bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl && \
+              apt-get install -y --no-install-recommends unixodbc-dev && \
+              curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add - && \
+              curl https://packages.microsoft.com/config/ubuntu/18.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list && \
+              apt-get -qq update && \
+              ACCEPT_EULA=Y apt-get -y install msodbcsql17 && \
+              python3 -m pip install virtualenv && python3 -m venv py38-venv && \
+              source py38-venv/bin/activate && \
+              python -m pip install --upgrade pip && \
+              pip install wheel && \
+              python setup.py install && \
+              pip install pytest && \
+              pip install sqlalchemy && \
+              pip install kafka && \
+              pip install redis && \
+              pip install selenium && \
+              pytest -sv --cov-config .coveragerc --cov-report html:skip-covered --cov-report term:skip-covered --cov=testcontainers --tb=short tests/ && \
+              codecov && \
+              deactivate' 
