--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
               arm64v8/ubuntu:20.04 \
               bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl && \
               apt-get install -y --no-install-recommends unixodbc-dev && \
-              curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add - && \
+              curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
               curl https://packages.microsoft.com/config/ubuntu/18.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list && \
               apt-get -qq update && \
               ACCEPT_EULA=Y apt-get -y install msodbcsql17 && \
