--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,7 +68,7 @@ jobs:
               bash -exc 'apt-get update && apt-get -y install python3 python3-pip python3-venv curl && \
               apt-get install -y --no-install-recommends unixodbc-dev && \
               curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - && \
-              curl https://packages.microsoft.com/config/ubuntu/18.04/prod.list | sudo tee /etc/apt/sources.list.d/mssql-release.list && \
+              curl https://packages.microsoft.com/config/ubuntu/18.04/prod.list | tee /etc/apt/sources.list.d/mssql-release.list && \
               apt-get -qq update && \
               ACCEPT_EULA=Y apt-get -y install msodbcsql17 && \
               python3 -m pip install virtualenv && python3 -m venv py38-venv && \
